...
            ),
            if (evals.length == 2)
              TabData(
                index: 2,
                title: const Tab(
                  key: Key("ComparisonsTab"),
                  child: Text('Comparisons'),
                ),
                content: EvaluationComparisonTab(
                  sessionID: widget.session.sessionID!,
                  patientID: widget.patient.id!,
                ),
              )
...
