...
    return Scaffold(
      appBar: AppBar(
        automaticallyImplyLeading:
            false, // Prevents the back button from showing
        actions: [
          TextButton.icon(
            key: const Key('SessionsDateSortButton'),
            icon: Icon(isAscending ? Icons.arrow_downward : Icons.arrow_upward,
                color: Colors.black),
            label: const Text('Date', style: TextStyle(color: Colors.black)),
            onPressed: () {
              setState(() {
                isAscending = !isAscending; // Toggle sort order
...
